--- a/manageroom/public/index.html
+++ b/manageroom/public/index.html
@@ -13,7 +13,7 @@
  
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;200;300;400;500;700;900&display=swap');
       </style>
     <title>席決めるアプリ</title>
   </head>
