ホームページ関連

--- a/manageroom/src/sample.html
+++ b/manageroom/src/sample.html
@@ -4,14 +4,14 @@
         <title>Study Buddy</title>
         <meta name="descripution" content="自宅で自習室の混雑具合がわかる！！">
         <meta name="viewpoint" content="width=device-width">
-        <script src="./js/toggle-menu.js"></script>
+        <script src="toggle-menu.js"></script>
         <link rel="stylesheet" href="common.css">
     </head>
     <body>
         <header class="header">
             <div class="header-inner">
                 <a class="header-logo"  href="./sample.html">
-                    <img src="img/ロゴ.png" alt="ロゴ">
+                    <img src="ロゴ.png" alt="ロゴ">
                 </a>
                 <button class="toggle-menu-button"></button>
                 <div class="header-site-menu">
@@ -37,7 +37,7 @@
                 <p>「自習室に行ったのに満席で勉強ができない」<br>あなたが自習室が利用できないことに落胆してトボトボ帰路につく。<br>わたしたちはそんな状況をすこしでも減らしたい…<br>そのためにつくられたアプリ「Study Buddy」。<br>ぜひともご利用ください！！
                 </p>
                 <div class="link-button-area">
-                    <a  class="link" href="sample.html">CONCEPT</a>
+                    <a  class="link" href="https://kurageproject-apphack.web.app/">使ってみる!!</a>
                 </div>
             </div>
         </main>
@@ -50,8 +50,8 @@
                     <li a href="./access.html">ACCESS</li>
                 </ul>
             </nav>
-            <a class="fotter-logo" href="./index.html">
-                <img src="img/logo2.png" alt="ロゴ">                
+            <a class="fotter-logo" href="index.html">
+                <img src="logo2.png" alt="ロゴ">                
             </a>
         </footer>
     </body>
