--- a/manageroom/public/index.html
+++ b/manageroom/public/index.html
@@ -15,7 +15,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
       </style>
-    <title>席決めるアプリ</title>
+    <title>StudyBuddy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
