ホームページの画面を追加

--- a/manageroom/public/index.html
+++ b/manageroom/public/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <a href="sample.html">ホームページへ</a>
     <div id="root"></div>
     <!--
       This HTML file is a template.
